feat: :sparkles: Agregar Información

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                     <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
                     <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
                     <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
-
                 </div>
             </div>
+
             <div class="col-2">
                 <h1 class="title-2">Mi perfil</h1>
                 <img class="picture" src="./storage/img/IMG-20240703-WA0003.png"/>
-                <p>¡Hola! Soy Daniela Forero Ballén y me dedico al aprendizaje constante, adquiriendo conocimientos que me permitan abordar de manera creativa los desafíos que surgen en el ámbito del desarrollo de software.</p>
+                <p>¡Hola! Soy Daniela Forero Ballén, soy una programadora dedicada al aprendizaje constante, adquiriendo conocimientos que me permitan abordar de manera creativa los desafíos que surgen en el ámbito del desarrollo de software.</p>
                 <h2>Mi Competencias</h2>
                 <ul type="none">
                     <li>Empatía</li>
@@ -106,21 +106,39 @@
                     <img class="abilities" src="./storage/img/mysql_PNG23.png"/>
                 </div>
                 <h2>Información adicional</h2>
-                <p>Además de mis habilidades en el campo del desarrollo de software, practico durante mi tiempo libre el arte e ilustración.</p>
+                <p>Además de mis habilidades en el campo del desarrollo de software, practico durante mi tiempo libre el arte e ilustración, reforzando mi capacidad de hacer que nuevas ideas cobren vida.</p>
             </div>
         </section>
 
         <section class="contain-info" id="objectives">
             <div class="col-1">
+                <div class="falling-icons">
+                    <img src="./storage/img/267_Python-1024.png" alt="Icon 1" class="icon">
+                    <img src="./storage/img/html-logo.png" alt="Icon 2" class="icon">
+                    <img src="./storage/img/css-logo.png" alt="Icon 3" class="icon">
+                    <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
+                    <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
+                    <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
+                </div>
             </div>
             <div>
                 <h1 class="title-2">Mis objetivos Profesionales</h1>
                 <p>Conseguir experiencia laboral a partir de la participación en diversos proyectos de desarrollo de software.</p>
+                <p>Continuar mis estudios sin afectar los proyectos en los que me encuentre trabajando.</p>
+                <p>Ser de apoyo para la evolución de empresas por medio de mi participación activa</p>
             </div>
         </section>
 
         <section class="contain-info" id="mission">
             <div class="col-1">
+                <div class="falling-icons">
+                    <img src="./storage/img/267_Python-1024.png" alt="Icon 1" class="icon">
+                    <img src="./storage/img/html-logo.png" alt="Icon 2" class="icon">
+                    <img src="./storage/img/css-logo.png" alt="Icon 3" class="icon">
+                    <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
+                    <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
+                    <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
+                </div>
             </div>
             <div>
                 <h1 class="title-2">Misión</h1>
@@ -130,6 +148,14 @@
 
         <section class="contain-info" id="vision">
             <div class="col-1">
+                <div class="falling-icons">
+                    <img src="./storage/img/267_Python-1024.png" alt="Icon 1" class="icon">
+                    <img src="./storage/img/html-logo.png" alt="Icon 2" class="icon">
+                    <img src="./storage/img/css-logo.png" alt="Icon 3" class="icon">
+                    <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
+                    <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
+                    <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
+                </div>
             </div>
             <div>
                 <h1 class="title-2">Visión</h1>
@@ -139,38 +165,66 @@
 
         <section class="contain-info" id="values">
             <div class="col-1">
+                <div class="falling-icons">
+                    <img src="./storage/img/267_Python-1024.png" alt="Icon 1" class="icon">
+                    <img src="./storage/img/html-logo.png" alt="Icon 2" class="icon">
+                    <img src="./storage/img/css-logo.png" alt="Icon 3" class="icon">
+                    <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
+                    <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
+                    <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
+                </div>
             </div>
-            <div>
+            <div class="align-table">
                 <h1 class="title-2">Valores</h1>
-                <p>Me destaco en los siguientes aspectos a nivel profesional:</p>
-                <ul type="none">
-                    <li>Creatividad</li>
-                    <li>Respeto</li>
-                    <li>Empatía</li>
-                    <li>Amabilidad</li>
-                    <li>Igualdad</li>
-                    <li>Aprendizaje</li>
-                    <li>Solidaridad</li>
-                </ul>
+                <table>
+                    <tr>
+                        <td>Creatividad</td>
+                        <td>Respeto</td>
+                    </tr>
+                    <tr>
+                        <td>Empatía</td>
+                        <td>Amabilidad</td>
+                    </tr>
+                    <tr>
+                        <td>Igualdad</td>
+                        <td>Aprendizaje</td>
+                    </tr>
+                </table>
             </div>
         </section>
 
         <section class="contain-info" id="certificates">
             <div class="col-1">
+                <div class="falling-icons">
+                    <img src="./storage/img/267_Python-1024.png" alt="Icon 1" class="icon">
+                    <img src="./storage/img/html-logo.png" alt="Icon 2" class="icon">
+                    <img src="./storage/img/css-logo.png" alt="Icon 3" class="icon">
+                    <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
+                    <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
+                    <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
+                </div>
             </div>
             <div>
                 <h1 class="title-2">Certificaciones</h1>
                 <h2>Certificación de Inglés: B2</h2>
-                <p>Texto.</p>
+                <p>Me certifiqué por medio de la prueba TOELF Junior en Octubre del año 2023, realizada en la institución educativa: Nuestra Señora del Rosario de Floridablanca.</p>
             </div>
         </section>
 
         <section class="contain-info" id="services">
             <div class="col-1">
+                <div class="falling-icons">
+                    <img src="./storage/img/267_Python-1024.png" alt="Icon 1" class="icon">
+                    <img src="./storage/img/html-logo.png" alt="Icon 2" class="icon">
+                    <img src="./storage/img/css-logo.png" alt="Icon 3" class="icon">
+                    <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
+                    <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
+                    <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
+                </div>
             </div>
             <div>
                 <h1 class="title-2">Servicios</h1>
-                <p>Ofrezco mis habilidades de desarrollo de Software junto a mis habilidades suaves para un entorno laboral.</p>
+                <p>Ofrezco mis habilidades de desarrollo de Software junto a mis habilidades suaves para un entorno laboral, con mi experiencia en trabajo en equipo y mi determinación en comunicar mis ideas de manera asertiva para obtener resultados óptimos.</p>
             </div>
         </section>
 
@@ -180,11 +234,21 @@
             <div>
                 <h1 class="title-2">Proyectos</h1>
                 <h2>Proyecto SpaceX</h2>
-                <p>Realizado en Campuslands en el año 2024. Desarrollo de FrontEnd y BackEnd para vista de información de lectura de SpaceX API usando HTML, CSS y JavaScript.</p>
+                <p>Realizado en Campuslands en Mayo del año 2024. Desarrollo de FrontEnd para vista de información de lectura de <a href="https://github.com/r-spacex/SpaceX-API">SpaceX API</a> usando <b>HTML</b>, <b>CSS</b> y <b>JavaScript</b>.</p>
+                <p>En este proyecto tuve la oportunidad de trabajar con uno de mis compañeros para alcanzar resultados satisfactorios.</p>
+                <p><b>Para acceder al repositorio de este trabajo, dirijase al repositorio <a href="https://github.com/furekinux/PROYECTO-FILTRO_JS_FORERODANIELA-GUTIERREZRONALD">PROYECTO-FILTRO_JS_FORERODANIELA-GUTIERREZRONALD</a></b></p>
+                
                 <h2>Proyecto Kario Media</h2>
-                <p>Realizado en Campuslands en el año 2024. Desarrollo de FrontEnd para una plataforma web de consulta usando HTML y CSS. Se realizó con un compañero.</p>
+                <p>Realizado en Campuslands en Marzo del año 2024. Desarrollo de FrontEnd para una plataforma web de consulta usando <b>HTML</b> y <b>CSS</b>.</p>
+                <p>En este proyecto tuve la oportunidad de trabajar con otro de mis compañeros, entregando un producto agradable y de acuerdo con los requisitos solicitados.</p>
+                <p><b>Para acceder al repositorio de este trabajo, dirijase al repositorio <a href="https://github.com/Oliwashere/PROYECTO-FILTRO_FORERODANIELA_LOPEZOLIVER">PROYECTO-FILTRO_FORERODANIELA_LOPEZOLIVER
+                </a></b></p>
+                
                 <h2>Proyecto Campuslands</h2>
-                <p>Realizado en Campuslands en el año 2024. Desarrollo de BackEnd para el sistema de administración de una institución de formación con Python. Se realizó con una compañera.</p>
+                <p>Realizado en Campuslands en Febrero del año 2024. Desarrollo de BackEnd para el sistema de administración de una institución de formación con <b>Python</b>. Se realizó con una compañera.</p>
+                <p>En este proyecto, pude trabajar por primera vez con una de mis compañeras, logrando un aplicativo final con funcionalidades según la petición del cliente.</p>
+                <p><b>Para acceder al repositorio de este trabajo, dirijase al repositorio <a href="https://github.com/furekinux/Proyecto_Python_ForeroDaniela-MulfordCatalina">Proyecto_Python_ForeroDaniela-MulfordCatalina</a></b></p>
+
             </div>
         </section>
     </div>
