feat: :sparkles: Agregar iconos

--- a/index.html
+++ b/index.html
@@ -230,6 +230,14 @@
 
         <section class="contain-info" id="projects">
             <div class="col-1">
+                <div class="falling-icons">
+                    <img src="./storage/img/267_Python-1024.png" alt="Icon 1" class="icon">
+                    <img src="./storage/img/html-logo.png" alt="Icon 2" class="icon">
+                    <img src="./storage/img/css-logo.png" alt="Icon 3" class="icon">
+                    <img src="./storage/img/js-logo.png" alt="Icon 4" class="icon">
+                    <img src="./storage/img/java-logo.png" alt="Icon 5" class="icon">
+                    <img src="./storage/img/mysql_PNG23.png" alt="Icon 6" class="icon"/>
+                </div>
             </div>
             <div>
                 <h1 class="title-2">Proyectos</h1>
