feat: :sparkles: Agregar información

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
             </div>
             <div class="align-table">
                 <h1 class="title-2">Valores</h1>
+                <p>A nivel profesional, me caracterizo con los siguientes valores que guían mi desarrollo y como me desenvuelvo a nivel profesional:</p>
                 <table>
                     <tr>
                         <td>Creatividad</td>
